--- a/flower.html
+++ b/flower.html
@@ -306,11 +306,9 @@
           <div class="leaf leaf--3"></div>
         </div>
       </div>
-      <div class="button">
-        <button>
-            <a href="foto.html" >Klik disini</a>
-        </button>
-    </div>
+      <a href="foto.html">
+        <button type="button" style="font-size: 20px;">Klik Disini</button>
+      </a>
     <script src="main.js"></script>
   </body>
 </html>
